--- a/solidjango/templates/pipelines/details.html
+++ b/solidjango/templates/pipelines/details.html
@@ -1,30 +1,65 @@
-<h1>{{ pipeline.label }}</h1>
-<h3>{{ pipeline.description }}</h3>
+{% extends 'pipelines/base.html' %}
 
-<table>
-    <tr>
-        <td>url:</td>
-        <td>{{ pipeline.url }}</td>
-    </tr>
-    <tr>
-        <td>type:</td>
-        <td>{{ pipeline.type }}</td>
-    </tr>
-    <tr>
-        <td>playbook:</td>
-        <td>{{ pipeline.playbook }}</td>
-    </tr>
-</table>
+{% load bootstrap4 %}
 
-<hr>
-<form action="setup/" method="post">{% csrf_token %}
-    <table>
-    {% for k,v in pipeline.playbook_vars_template.items %}
-        <tr>
-            <td>{{ k }}:</td>
-            <td><input type="text" id="{{ k }}" name="{{ k }}" placeholder="{{ v }}" value="{{ v }}"></td>
-        </tr>
-    {% endfor %}
-    </table>
-    <input type="submit" value="Setup">
-</form>
+{% block content %}
+<div class="card" style="width:100%">
+    <div class="card-header">
+        <h3>{{ pipeline.label }}</h3>
+        <h7>{{ pipeline.description }}</h7>
+
+    </div>
+    <div class="card-body">
+        <table class="table-responsive">
+            <form action="setup/" class="form-control" method="post">{% csrf_token %}
+                <tr>
+                    <td>
+                        <div class="card">
+                            <div class="card-header">Pipeline configuration</div>
+                            <div class="card-body">
+                                {% for k,v in pipeline.playbook_vars_template.items %}
+
+                                    <div class="form-group">
+                                        <label for="{{ k }}">{{ k }}</label>
+                                        <input type="text" id="{{ k }}" name="{{ k }}"
+                                               placeholder="{{ v }}" value="{{ v }}"
+                                               class="form-control">
+                                    </div>
+                                {% endfor %}
+                            </div>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="card" style="width:100%">
+                            <div class="card-header">Pipeline configuration</div>
+                            <div class="card-body">
+                                {% for k,v in pipeline.playbook_vars_template.items %}
+
+                                    <div class="form-group">
+                                        <label for="{{ k }}">{{ k }}</label>
+                                        <input type="text" id="{{ k }}" name="{{ k }}"
+                                               placeholder="{{ v }}" value="{{ v }}"
+                                               class="form-control">
+                                    </div>
+                                {% endfor %}
+                            </div>
+                        </div>
+                    </td>
+                </tr>
+            </form>
+        </table>
+
+
+        {% endblock %}ges %}
+
+        <form action="setup/" method="post">{% csrf_token %}
+            <table>
+                {% for k,v in pipeline.playbook_vars_template.items %}
+                <tr>
+                    <td>{{ k }}:</td>
+                    <td><input type="text" id="{{ k }}" name="{{ k }}" placeholder="{{ v }}" value="{{ v }}"></td>
+                </tr>
+                {% endfor %}
+            </table>
+            <input type="submit" value="Setup">
+        </form>
